# ccbox

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.agents/designs/: DESIGN_CLAUDE_VIEW.md  DESIGN_CLI_MODE.md  DESIGN_PRELIMINARY.md
.github/workflows/: release.yml
migrations/: 20260219193000_create_tasks.sql
scripts/: install.sh  validate-recent-sessions.sh
skills/: README.md
skills/ccbox/: README.md  SKILL.md
skills/ccbox-insights/: README.md  SKILL.md
skills/ccbox-insights/agents/: openai.yaml
skills/ccbox-insights/references/: facets.md  report.md
skills/ccbox/agents/: openai.yaml
skills/ccbox/references/: cli.md  insights.md
src/: main.rs
src/app/: fork.rs  line_editor.rs  mod.rs  mouse.rs  text_editor.rs
src/cli/: mod.rs
src/domain/: claude.rs  gemini.rs  mod.rs  parse.rs  stats.rs  tasks.rs  timeline.rs  types.rs
src/infra/: claude.rs  delete.rs  gemini.rs  mod.rs  opencode.rs  processes.rs  scan.rs  scan_all.rs  session_detail.rs  session_index.rs  update.rs  watch.rs
src/ui/: mod.rs  theme.rs
