[package]
name = "ccbox"
version = "0.1.2"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
crossterm = "0.29.0"
dirs = "6.0.0"
flate2 = "1.1.0"
humansize = "2.1.3"
notify = "6.1.1"
ratatui = "0.29.0"
sha2 = "0.10.9"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
ureq = { version = "3.2.0", features = ["json"] }
unicode-width = "0.2.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.12.0"
